# SlicerTemplate

./: BUILD.md  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  LICENSE  README.md
Applications/: CMakeLists.txt
Applications/snmApp/: CMakeLists.txt  Main.cxx  qsnmAppMainWindow.cxx  qsnmAppMainWindow.h  qsnmAppMainWindow_p.h  slicer-application-properties.cmake
Applications/snmApp/Widgets/: qAppStyle.cxx  qAppStyle.h
Modules/Scripted/navigation/: CMakeLists.txt
Modules/Scripted/navigation/navigation/: CMakeLists.txt  navigation.py  preprocessing.txt
Modules/Scripted/navigation/navigation/Resources/UI/: navigation.ui
Modules/Scripted/navigation/navigation/Resources/model/: NeedleModel.stl
Modules/Scripted/navigation/navigation/navigationLib/: Rendering.py  helpFunction.py  niiCook.py  simulationFunction.py
